# ram-ai-python

./: .gitignore  README.md  pyproject.toml  sample_data.json  setup.sh  tasks.py
src/ram_ai_python/: bedrock_json_handler.py  json_examples.py  main.py
src/ram_ai_python/agent/: agent.py
src/ram_ai_python/hotle/: service.py
src/ram_ai_python/mcp/: mcp_service.py
src/ram_ai_python/module1/: lists.py  util.py  utils.py
src/ram_ai_python/module2/: util.py
src/ram_ai_python/util/: __init__.py  lesson1.py
tests/: test_main.py
