[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ram-ai-python"
version = "0.1.0"
description = "A simple Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ram_ai_python", from = "src"}]

[tool.poetry.scripts]
ram-ai-python = "ram_ai_python.main:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
boto3 = "^1.34"
flask = "^3.0"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
invoke = "^2.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
